the terminal is reset after ctrl-C

--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2018" "icmake\&.9\&.02\&.06\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2018" "icmake\&.9\&.02\&.07\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
@@ -1577,6 +1577,8 @@ for \fBC++\fP and \fBC\fP program maintenance\&.
 .SH "BUGS"
 Standard comment starting  on lines containing preprocessor directives
 may not extend over multiple lines\&.
+.PP 
+Path names containing blanks are not supported\&.
 .PP 
 .SH "COPYRIGHT"
 This is free software, distributed under the terms of the 
