--- a/icmake/doc/icmstart.1
+++ b/icmake/doc/icmstart.1
@@ -1,4 +1,4 @@
-.TH "icmstart" "1" "1992\-2018" "icmake\&.9\&.02\&.06\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992\-2018" "icmake\&.9\&.02\&.07\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
@@ -204,7 +204,7 @@ Default skeleton resource file\&.
 \fBicmake\fP(1), \fBicmbuild\fP(1), \fBicmconf\fP(7), \fBicmstart\&.rc\fP(7)\&.
 .PP 
 .SH "BUGS"
-None reported
+Path names containing blanks are not supported\&.
 .PP 
 .SH "COPYRIGHT"
 This is free software, distributed under the terms of the 
